--- a/EduCenter_BE/src/main/resources/application.properties
+++ b/EduCenter_BE/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=EduCenter_BE
+spring.datasource.url=jdbc:mysql://localhost:3306/edu_center
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate t? t?o b?ng
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
